# graphmind

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  package-lock.json  package.json  pyproject.toml  pytest.ini  ruff.toml  test_app.py
app/: config.py  logging.py  main.py
app/api/: entities.py  errors.py  graph.py  health.py  relationships.py
app/db/: session.py
app/models/: base.py  entity.py  relationship.py
app/schemas/: base.py  entity.py  relationship.py
backend/: README.md  pyrightconfig.json  ruff.toml
backend/app/: config.py  main.py
backend/app/api/: graph.py
backend/app/models/: base.py
backend/app/schemas/: base.py  entity.py
backend/migrations/: script.py.mako
backend/rest/: README.md  entity.http  graph.http  http-client.env.json
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx  flow-styles.css  store.ts
frontend/src/src/components/: GraphEditor.tsx  TextBoxNode.tsx
frontend/src/src/redux/: graphSlice.ts
frontend/src/src/styles/: flow-styles.css
migrations/: env.py
migrations/versions/: 20250818_1518_initial_migration.py
rest/: entity.http  http-client.env.json  relationships.http  test_graph_api.sh
tests/: conftest.py  db_utils.py  mock_config.py  test_settings.py
tests/api/: test_entities.py  test_graph.py  test_health.py  test_relationships.py
