[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphapp"
version = "0.1.0"
description = "Backend graph service for entities, relationships, and metadata"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.28.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "uuid>=1.30",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.0.292",
    "black>=23.9.1",
    "pytest>=7.4.2",
    "httpx>=0.25.0",
    "pytest-asyncio>=0.21.1",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
